test_output.txt
Traceback (most recent call last):
  File "D:\Anshu\Projects\Vibe_Programming\cluster-health-monitor\health_monitor.py", line 24, in <module>
    from monitor.cli.benchmark_cli import benchmark_cli
  File "D:\Anshu\Projects\Vibe_Programming\cluster-health-monitor\monitor\cli\benchmark_cli.py", line 11, in <module>
    from monitor.benchmark import GPUBenchmark, BenchmarkConfig
  File "D:\Anshu\Projects\Vibe_Programming\cluster-health-monitor\monitor\benchmark\__init__.py", line 10, in <module>
    from .runner import GPUBenchmark, get_benchmark_instance
  File "D:\Anshu\Projects\Vibe_Programming\cluster-health-monitor\monitor\benchmark\runner.py", line 9, in <module>
    from .workloads import GPUStressWorker
  File "D:\Anshu\Projects\Vibe_Programming\cluster-health-monitor\monitor\benchmark\workloads.py", line 11, in <module>
    from . import physics_torch
  File "D:\Anshu\Projects\Vibe_Programming\cluster-health-monitor\monitor\benchmark\physics_torch.py", line 73
    if len(inactive_indices) > 0:
                                 ^
IndentationError: unindent does not match any outer indentation level
